--- a/pageinto4.html
+++ b/pageinto4.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Four Sections Page</title>
+<style>
+  body {
+    margin: 0;
+    font-family: sans-serif;
+  }
+
+  #container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 50vh 50vh;
+  }
+
+  #section1, #section2, #section3, #section4 {
+    border: 1px solid black;
+    padding: 10px;
+  }
+
+  #section2 img {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+</style>
+</head>
+<body>
+  <div id="container">
+    <div id="section1">
+      <h2>About Lists</h2>
+      </div>
+    <div id="section2">
+      <a href="#section1"><img src="image.jpg" alt="Image Link"></a>
+    </div>
+    <div id="section3">
+      </div>
+    <div id="section4">
+      </div>
+  </div>
+</body>
+</html>
 
