--- a/pageinto4.html
+++ b/pageinto4.html
@@ -29,7 +29,23 @@
 <body>
   <div id="container">
     <div id="section1">
-      <h2>About Lists</h2>
+   
+      <ol type="I">
+  <li>introduction</li>
+  <li>Part 1</li>
+   		<ol type="A">
+  		<li>Description</li>
+       <li>example</li>
+          <ol type="1">
+           <li>Reference One</li>
+          <li>Reference Two</li>
+          </ol> 
+          
+        </ol> 
+  <li>Part 2</li>
+   <li>Summary</li>
+        
+</ol>
       </div>
     <div id="section2">
       <a href="#section1"><img src="image.jpg" alt="Image Link"></a>
@@ -41,4 +57,3 @@
   </div>
 </body>
 </html>
-
